Fixed figure spacing
Added spacing between paragraphs to allow for text readability

--- a/Week2/css/main.css
+++ b/Week2/css/main.css
@@ -117,13 +117,19 @@ img {
 
 figure {
   margin: 0;
+
+}
+
+figure p{
+  margin-left: 0.5rem;
+  margin-bottom: 2rem;
 }
 
 figcaption {
   font-style: italic;
+  color: #4d4d4d;
   margin: 0;
 }
-
 
 /* LINKS */
 
